# projetB3

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
ProjetB3/: main.cpp
ProjetB3/Core/: Engine.h
ProjetB3/Core/Components/: AnimatedSprite.cpp  AnimatedSprite.h  BoundingBox.h  Component.cpp  Component.h  Physics.cpp  Physics.h  Sprite.h  Transform.cpp  Transform.h
ProjetB3/Core/Entities/: Actor.cpp  Actor.h  Block.h  Canvas.cpp  Canvas.h  DeathZone.cpp  DeathZone.h  Entity.cpp  Entity.h  Player.cpp  Player.h  Threat.cpp  Threat.h  UIElement.cpp  UIElement.h
ProjetB3/Core/Game/: BaseObject.cpp  BaseObject.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Level.cpp  Level.h  Particle.h
ProjetB3/Core/Scenes/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h
ProjetB3/Core/Systems/: AssetManager.cpp  AssetManager.h  EntityManager.cpp  EntityManager.h  GameManager.h  InputManager.cpp  InputManager.h  PhysicsManager.cpp  PhysicsManager.h  SceneManager.cpp  SceneManager.h  SystemManager.cpp  SystemManager.h  UIManager.cpp  UIManager.h
ProjetB3/Maths/: Vector2.h
ProjetB3/Utils/: ClassManager.cpp  ClassManager.h  ClassType.h  Delegate.h  Factory.cpp  Factory.h  Signal.h  Singleton.cpp  Singleton.h  WorldEnvironment.h
